# ADBTunnel

./: .gitignore  CLAUDE.md  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/adbtunnel/device/: AdbStateChecker.java  DeviceInfo.java  DeviceRegistry.java
android/app/src/main/java/com/adbtunnel/executor/: CommandExecutor.java  CommandPayload.java  CommandResult.java  InputExecutor.java  ScreencapExecutor.java  ShellExecutor.java
android/app/src/main/java/com/adbtunnel/receiver/: BootCompletedReceiver.java
android/app/src/main/java/com/adbtunnel/service/: TunnelForegroundService.java
android/app/src/main/java/com/adbtunnel/tunnel/: FrameParser.java  ReconnectScheduler.java  WsClient.java  WsFrame.java  WsFrameHandler.java
android/app/src/main/java/com/adbtunnel/ui/: ConfigActivity.java  MainActivity.java  SetupActivity.java
android/app/src/main/res/layout/: activity_config.xml  activity_main.xml  activity_setup.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: 01-product-overview.md  02-system-architecture.md  03-execution-flow.md  04-protocol-design.md  05-android-design.md  06-server-design.md  07-security-design.md  08-deployment-guide.md  09-roadmap.md
server/: Cargo.toml
server/src/: config.rs  dispatcher.rs  error.rs  main.rs  session_manager.rs
server/src/http/handlers/: devices.rs  health.rs  input.rs  mod.rs  screenshot.rs  shell.rs
server/src/ws/: frame.rs  mod.rs  server.rs  session.rs
(+2 files in other folders)
