[package]
name = "adbtunnel-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adbtunnel-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"

tokio-stream = "0.1"
futures-util = "0.3"
base64 = "0.22"
